fix: 增加 max-tokens 配置支持推理模型
- 推理模型 (mimo-v2.5-pro) 需要更多 token 完成思考后才输出 content
- 添加 spring.ai.openai.chat.options.max-tokens 配置，默认 4096
- 清理 AiChatService 中冗余的 response.getResult() 调用